--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@
         font-weight: bold;
         border-radius: 12px;
         background-color: #ff6f61;
-        color: white;
+        color: rgb(12, 12, 12);
         border: none;
         cursor: pointer;
         transition: background 0.3s, transform 0.2s;
@@ -254,6 +254,10 @@
 
     .success-message.success {
         color: #17fa02;
+        /* sombra da letra */
+        text-shadow: 2px 2px rgb(7, 7, 7);
+        /* Borda da letra */
+        /* -webkit-text-stroke: 0.3px black; */
     }
 
     .success-message.error {
